--- a/MyOrder/MyOrder/IntroductPage.xaml
+++ b/MyOrder/MyOrder/IntroductPage.xaml
@@ -2,7 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyOrder.IntroductPage"
-             Title="IntroductPage">
-  
-    
+             Title="Back to Welcome Page">
+
+    <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+        <Label Text="THis is how the app work"/>
+        <Button Text="Back" Clicked="Button_OnClicked"></Button>
+    </StackLayout>
 </ContentPage>
